# polyphony

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml.example  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.local.transcript.md  demo.local.transcript.polyphony.json  demo.m4a  generate_demo.sh
frontend/: biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
src/polyphony/: __init__.py  asr_correction.py  audio.py  cache.py  cli.py  diarize.py  gemini_client.py  paragraphize.py  playground.py  reconcile.py  serve.py  transcript.py  types.py  whisper.py
src/polyphony/backends/: __init__.py  base.py  gemini.py  local.py
src/polyphony/static/: index.html
src/polyphony/static/assets/: index.css  main.js  main.js.map
tests/: test_reconcile.py
